single project: fix image bleed

--- a/content/themes/pitaveri/sass/pages/_single-project.scss
+++ b/content/themes/pitaveri/sass/pages/_single-project.scss
@@ -108,18 +108,12 @@
         }
 
         @include breakpoint($breakpoint-s) {
-            border: 0;
-            padding: 0;
-            height: auto;
             margin-top: 0;
+            padding-left: 0;
+            border: 0;
+            padding-top: 100vh;
 
             img {
-                position: static;
-                height: auto;
-                margin-top: 0;
-                min-width: 100%;
-                max-width: 100%;
-                width: 100%;
                 @include translateX(0);
             }
         }
